bad/assign_class_casted_null_class_down.example_compiler_output
ERROR
[1mbad/assign_class_casted_null_class_down.lat:6:10: [1;31merror: [0;1mleft side is not assignable[m
	(Y)null = new X;
	        [1;32m^[m
[1mbad/assign_class_casted_null_class_down.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	(Y)null = new X;
	[1;32m^[m
